--- a/package.json
+++ b/package.json
@@ -55,13 +55,13 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "npm-run-all": "^4.1.5",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-redux": "^7.1.1",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
+    "react-redux": "7.2.9",
     "react-router-dom": "^5.1.2",
     "react-scripts": "5",
     "react-test-renderer": "^16.9.0",
-    "redux": "^4.0.4",
+    "redux": "4.2.1",
     "sass": "^1.54.3"
   },
   "devDependencies": {
