--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-redux": "7.2.9",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "5.3.4",
     "react-scripts": "5",
     "react-test-renderer": "^16.9.0",
     "redux": "4.2.1",
